# OPP-labs

labs/lab1/: CMakeLists.txt  main.cpp  readme.md  script.sh  script_v2.sh
labs/lab1/sources/: .CommonSolutionV1.hpp.swp  AbstractSolution.cpp  AbstractSolution.hpp  CMakeLists.txt  CommonSolutionV1.cpp  CommonSolutionV1.hpp  RootSolutionV1.cpp  RootSolutionV1.hpp  SolutionFactory.cpp  SolutionFactory.hpp  SolutionV1.cpp  SolutionV1.hpp  SolutionV2.cpp  SolutionV2.hpp  Utils.hpp
labs/lab2/: CMakeLists.txt  main.c  multiple_blocks.txt  ompv1.c  one_block.txt
labs/lab5/: CMakeLists.txt  main.cpp
labs/lab5/sources/: CMakeLists.txt  Task.cpp  Task.hpp  ThreadService.cpp  ThreadService.hpp
